--- a/SinglePageWebApp.html
+++ b/SinglePageWebApp.html
@@ -1,5 +1,16 @@
 <!--
   Jaye Hicks 2018
+
+  Obligatory legal disclaimer:
+   You are free to use this source code (this file and all other files 
+   referenced in this file) "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER 
+   EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED 
+   WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE 
+   ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THIS SOURCE CODE IS WITH 
+   YOU.  SHOULD THE SOURCE CODE PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL 
+   NECESSARY SERVICING, REPAIR OR CORRECTION. See the GNU GENERAL PUBLIC 
+   LICENSE Version 3, 29 June 2007 for more details. 
+  
   Use this working template as a starting point for developing a JavaScript-based single-page 
   web application that uses AWS Cognito to authenticate users as well as store user ids and 
   user passwords.  After you provision the necessary AWS infrastructure (i.e., Cognito), you
